# TC

./: analyzer.py  app.py  language_utils.py  pyproject.toml  styles.py  utils.py
.streamlit/: config.toml
attached_assets/: Pasted--T-C-Review-Agent-Upload-your-T-C-document-for-comprehensive-analysis-across-key-areas-of-concern--1741115818155.txt  Pasted-1-Delivery-Process-Timeframes-The-T-C-should-specify-estimated-delivery-times-e-g-within-7-bus-1741115719164.txt  Pasted-1-Quality-Assurance-and-Performance-Standards-Service-Level-Agreements-SLAs-In-certain-contracts-1741115582109.txt  Pasted-AttributeError-str-object-has-no-attribute-items-Traceback-File-home-runner-workspace-pyt-1741426243562.txt  Pasted-When-reviewing-a-Terms-and-Conditions-T-C-document-there-are-several-key-items-you-should-be-co-1741114665012.txt
