[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "docx>=0.2.4",
    "fpdf>=1.7.2",
    "langdetect>=1.0.9",
    "openai>=1.65.2",
    "pandas>=2.2.3",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "streamlit>=1.42.2",
]
